--- a/css/pages.css
+++ b/css/pages.css
@@ -505,27 +505,31 @@ div.stagesText li:first-of-type{
 }
 
 #countdownSection {
-  background: #592b27;
+  background: #0d0d0d;
   width: 40%;
   margin-left: 30%;
   padding-bottom: 1%;
+  margin-bottom: 5%;
 }
 
 #countdownH4 {
   font-family: 'Open Sans', sans-serif;
-  font-size: 22px;
+  font-size: 24px;
   text-align: center;
   margin-bottom: 3%;
   padding-top: 2%;
   color: #fdfdfd;
+  font-weight: bold;
+  text-transform: uppercase;
+  text-decoration: underline;
 }
 
-.countdownTimer {
+.timerP {
   font-family: 'Roboto', sans-serif;
-  font-size: 18px;
-  color: #f26e50;
+  font-size: 22px;
+  font-weight: 100;
   text-align: center;
-  color: #fdfdfd;
+  color: #f26e50;
 }
 
 /* Navigation */
@@ -913,6 +917,15 @@ div.burgerLinks a {
   padding-top: 3%;
 }
 
+#countdownSection {
+  width: 70%;
+  margin-left: 15%;
+}
+
+#countdownH4 {
+  font-size: 20px;
+}
+
 #timelineImg {
   width: 90%;
 }
@@ -1073,7 +1086,7 @@ footer {
   }
 
   .stagesBox {
-    height: 400px;
+    height: 450px;
     width: 98%;
     margin-left: 1%;
     margin-top: 5%;
