--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,34 @@ header {
 
 main {
   grid-area: main;
-  height: 1000px;
+  height: 1200px;
+}
+
+#callToAction {
+  font-size: 32px;
+  border: none;
+  padding: 10px;
+  margin-left: 43%;
+  margin-top: 15%;
+  background: #592b27;
+  box-shadow: 3px 4px #0d0d0d;
+  color: #fdfdfd;
+  cursor: pointer;
+  border-radius: 10px;
+}
+
+#callToAction:hover {
+  background: darkgreen;
+}
+
+#callToAction a {
+  text-decoration: none;
+  color: #fdfdfd;
+}
+
+#callToAction a:hover {
+  font-size: 1.1em;
+  transition: 1s;
 }
 
 h1 {
@@ -347,6 +374,11 @@ footer input[type="text"] {
     height: 1100px;
   }
 
+  #callToAction {
+    margin-left: 30%;
+    margin-top: 15%;
+  }
+
   h1 {
     margin-top: 5%;
     margin-left: 0;
@@ -502,6 +534,12 @@ footer {
 
   .main {
     height: 580px;
+  }
+
+  #callToAction {
+    margin-left: 15%;
+    margin-top: 45%;
+    font-size: 24px;
   }
 
   .socialMobile {
