--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@ body {
 }
 
 #container {
+  display:-ms-grid;
   display: grid;
   grid-template-areas: "header"
                        "main"
@@ -112,6 +113,10 @@ a:hover {
   color: #f26e50;
   font-size: 1.1em;
   font-weight: bold;
+}
+
+.burger .fa {
+  margin-top: 60%;
 }
 
 
@@ -403,17 +408,6 @@ footer input[type="text"] {
   display: block;
 }
 
-.line {
-  background: white;
-  width: 65%;
-  height: 6%;
-  margin-top: 12%;
-}
-
-.line:first-of-type {
-  margin-top: 65%;
-}
-
 ul {
   display: none;
 }
@@ -468,7 +462,7 @@ div.burgerLinks a {
   position: absolute;
   font-size: 50px;
   color: #fdfdfd;
-  top: 5%;
+  top: 0;
   right: 3%;
 }
 
